# PredictiveRolls

./: .clippy.toml  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RELEASE_NOTES.md  config.toml.example  rustfmt.toml
.github/workflows/: android.yml  ci.yml
android/: API_INTEGRATION.md  ARCHITECTURE.md  CICD_SETUP.md  GETTING_STARTED.md  README.md  build.gradle  build.sh  settings.gradle
android-lib/: Cargo.toml
android-lib/src/: duckdice_api.rs  lib.rs
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/predictiverolls/: MainActivity.java  PredictiveRollsNative.java  SettingsActivity.java
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
src/: config.rs  currency.rs  data.rs  dataset.rs  main.rs  model.rs  util.rs
src/sites/: crypto_games.rs  fake_test.rs  free_bitco_in.rs  mod.rs
src/strategies/: mod.rs
