[package]
name = "freebitco_in"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
burn = { version = "0.18", features = ["vulkan", "dataset", "train"] }
dotenvy = "0.15"
regex = "1"
reqwest = { version = "0.12", features = [
  "json",
  "cookies",
  "gzip",
  "brotli",
  "zstd",
  "deflate",
] }
colored = "2"
csv = "1"
serde = { version = "1", features = ["std", "derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
ring = "0.17"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.5.0"
toml = "0.8"
env_logger = "0.11"
log = "0.4"
