[package]
name = "predictive_rolls_android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
log = "0.4"
android_logger = "0.13"
lazy_static = "1.5.0"
rand = "0.9"

# Re-use dependencies from the main project
freebitco_in = { path = ".." }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary
